# mediawiki_rust_example

./: Cargo.toml  README.md
src/: main.rs
