[package]
name = "mediawiki_rust_example"
version = "0.1.0"
authors = ["Cody Logan <clpo13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediawiki = "0.2.11"
tokio = { version = "1.32.0", features = ["full"] }
